--- a/notebooks/Face_Classification_ArcFace_Embeddings.ipynb
+++ b/notebooks/Face_Classification_ArcFace_Embeddings.ipynb
@@ -155,7 +155,8 @@
         "\n",
         "from torch.utils.data import DataLoader, Dataset\n",
         "from torchvision import transforms\n",
-        "from torch.utils.data import Subset"
+        "from torch.utils.data import Subset\n",
+        "import random"
       ]
     },
     {
@@ -331,10 +332,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
+        "# Датасет\n",
+        "\n",
         "class CelebADataset(Dataset):\n",
         "    def __init__(self, images_info, images_dir, mode):\n",
         "        super().__init__()\n",
@@ -358,18 +361,19 @@
         "        label = self.images_info.iloc[idx]['image_id'] \n",
         "\n",
         "        # аугментации\n",
+        "        rescale_size=256\n",
         "        if self.mode == 'train':\n",
         "            transform = transforms.Compose([\n",
-        "                transforms.Resize((RESCALE_SIZE, RESCALE_SIZE)),\n",
+        "                transforms.Resize((rescale_size, rescale_size)),\n",
         "                transforms.RandomHorizontalFlip(p=0.5),  # Randomly flip images horizontally\n",
-        "                transforms.RandomResizedCrop(RESCALE_SIZE, scale=(0.9, 1.0)),  # Random crop with slight zoom-in effect\n",
+        "                transforms.RandomResizedCrop(rescale_size, scale=(0.9, 1.0)),  # Random crop with slight zoom-in effect\n",
         "                transforms.ToTensor(),\n",
         "                # в соответствии со значениями среднего и стандартного отклонения для моделей, обученных на ImageNet\n",
         "                transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225]) \n",
         "            ])\n",
         "        else:\n",
         "            transform = transforms.Compose([\n",
-        "                transforms.Resize((RESCALE_SIZE, RESCALE_SIZE)),\n",
+        "                transforms.Resize((rescale_size, rescale_size)),\n",
         "                transforms.ToTensor(),\n",
         "                transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])\n",
         "            ])\n",
@@ -573,7 +577,8 @@
         "# EfficientNet_B1_Weights - CrossEntropy loss\n",
         "\n",
         "# Количество классов\n",
-        "NUM_CLASSES = 500\n",
+        "num_classes = 500\n",
+        "num_epochs = 10\n",
         "\n",
         "# Перемещаем модель на GPU\n",
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
@@ -587,19 +592,12 @@
         "# Заменяем классификатор (голову) на новый с нужным числом выходов\n",
         "weights = EfficientNet_B1_Weights.IMAGENET1K_V2\n",
         "model = efficientnet_b1(weights=weights)\n",
-        "model.classifier[1] = torch.nn.Linear(model.classifier[1].in_features, NUM_CLASSES)\n",
+        "model.classifier[1] = torch.nn.Linear(model.classifier[1].in_features, num_classes)\n",
         "model = model.to(device)\n",
-        "\n",
-        "# model.classifier = nn.Sequential(\n",
-        "#     nn.Dropout(p=0.2),  # Регуляризация\n",
-        "#     nn.Linear(model.classifier[1].in_features, NUM_CLASSES)\n",
-        "# )\n",
         "\n",
         "criterion = nn.CrossEntropyLoss()\n",
         "optimizer = torch.optim.Adam(model.parameters(), lr=1e-3, weight_decay=1e-4)\n",
         "scheduler = lr_scheduler.StepLR(optimizer, step_size=3, gamma=0.2)\n",
-        "\n",
-        "num_epochs = 10\n",
         "\n",
         "train_accuracies = []\n",
         "val_accuracies = []\n",
@@ -658,7 +656,6 @@
         "    val_accuracies.append(100 * val_correct / val_total)\n",
         "\n",
         "    print(f\"Validation Loss: {avg_val_loss:.4f}, Validation Accuracy: {100 * val_correct / val_total:.2f}%\")\n",
-        "\n",
         "    scheduler.step()  # Передаем avg_val_loss, если используешь ReduceLROnPlateau\n"
       ]
     },
@@ -785,7 +782,6 @@
       "outputs": [],
       "source": [
         "# ArcFaceLoss\n",
-        "# Чёткое разделение логики: backbone → logits → loss.\n",
         "\n",
         "class ArcFaceLogits(nn.Module):\n",
         "    def __init__(self, ebmb_size, n_classes):\n",
@@ -864,6 +860,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "# Функция обучения модели с ArcFaceLoss\n",
+        "\n",
         "def train_model_arcface(\n",
         "    model, \n",
         "    logits_calc,\n",
@@ -1429,6 +1427,8 @@
         }
       ],
       "source": [
+        "# Обучение модели с ArcFaceLoss\n",
+        "\n",
         "batch_size = 64\n",
         "train_loader = DataLoader(train_dataset, num_workers=0, batch_size=batch_size, shuffle=True)\n",
         "val_loader = DataLoader(val_subset, num_workers=0, batch_size=batch_size, shuffle=False)\n",
@@ -1587,14 +1587,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "import torch\n",
-        "import torch.nn.functional as F\n",
-        "import numpy as np\n",
-        "from PIL import Image\n",
-        "from torchvision import transforms\n",
+        "# Функция для вычисления эмбеддингов изображений\n",
         "\n",
-        "# Функция для вычисления эмбеддингов изображений:\n",
-        "def compute_embeddings(model, images_list, device='cuda', rescale_size=224):\n",
+        "def compute_embeddings(model, images_list, device='cuda', rescale_size=256):\n",
         "    model = model.to(device).eval()\n",
         "    embeddings = []\n",
         "\n",
@@ -1624,7 +1619,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -1644,12 +1639,13 @@
         }
       ],
       "source": [
-        "# сравненея эмбеддингов:\n",
+        "# Сравнение эмбеддингов:\n",
         "# Загрузить аннотации (идентификаторы лиц) из celebA_anno.txt.\n",
         "# Выбрать по 10 изображений той же личности и по 10 — разных.\n",
         "# Применить compute_embeddings() и посчитать косинусную схожесть.\n",
         "\n",
-        "# 1: Загрузка аннотаций\n",
+        "\n",
+        "# Загрузка аннотаций\n",
         "# читаем фиксации путей и identity-label\n",
         "def load_annotations(annotations_file):\n",
         "    id_dict = {}  # mapping image_name -> identity\n",
@@ -1660,8 +1656,7 @@
         "    return id_dict\n",
         "\n",
         "\n",
-        "# 2: Выбор изображений\n",
-        "import random\n",
+        "# Выбор изображений\n",
         "def sample_same_and_diff(id_dict, images_dir, same_identity, n=10):\n",
         "    # собираем всех по одному id\n",
         "    same = [name for name, pid in id_dict.items() if pid == same_identity]\n",
@@ -1675,7 +1670,7 @@
         "           [os.path.join(images_dir, name) for name in diff]\n",
         "           \n",
         "\n",
-        "# 3: Загрузка модели\n",
+        "# Загрузка модели\n",
         "model = ArcFaceEfficientNet()\n",
         "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
         "\n",
@@ -1703,7 +1698,7 @@
         }
       ],
       "source": [
-        "# 4: Сравнение эмбеддингов\n",
+        "# Сравнение эмбеддингов\n",
         "\n",
         "images_dir = 'H:/Disk3/Python/Deep_Learning_MFTI_Part1_2025/23.1 Проект/Dataset/celebA_train_500/celebA_imgs'\n",
         "annotations_file = 'H:/Disk3/Python/Deep_Learning_MFTI_Part1_2025/23.1 Проект/Dataset/celebA_train_500/celebA_anno.txt'\n",
@@ -1764,8 +1759,7 @@
         }
       ],
       "source": [
-        "# 4: Визуализация распределений попарных cosines 10 картинок одного человека и разных людей.\n",
-        "import matplotlib.pyplot as plt\n",
+        "# Визуализация распределений попарных cosines 10 картинок одного человека и разных людей.\n",
         "\n",
         "same_vals = sim_same[np.triu_indices(10, k=1)]\n",
         "diff_vals = sim_diff.flatten()\n",
@@ -1781,7 +1775,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Видно, что cosine_similarity для разных фото одного человека начинаются с 0,2, и пересекаются с cosine_similarity для разных людей."
+        "Видно, что cosine_similarity для разных фото одного человека начинаются с 0,2, и пересекаются с cosine_similarity для разных людей.\n",
+        "\n",
+        "Test Accuracy с ArcFace Loss 87.8% значительно превышает Accuracy с CrossEntropy (70%). Но даже с ArcFace Loss эмбеддинги для лиц одинаковых персонажей сильно пересекаются с эмбеддингами для лиц различных людей."
       ]
     }
   ],
