--- a/notebooks/Face_Classification_ArcFace_Embeddings.ipynb
+++ b/notebooks/Face_Classification_ArcFace_Embeddings.ipynb
@@ -765,7 +765,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Test Accuracy, efficientnetb1 с CE Loss: 70.11%"
+        "#### Test Accuracy, efficientnetb1 с CE Loss: 70.11%"
       ]
     },
     {
